--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "Other"
   ],
   "activationEvents": [
-    "onView:USDT"
+    "*"
   ],
   "main": "./extension",
   "contributes": {
@@ -39,17 +39,17 @@
     "viewsContainers": {
       "activitybar": [
         {
-          "id": "blockChain",
-          "title": "数字货币价格监控",
+          "id": "package",
+          "title": "包管理",
           "icon": "img/icon.svg"
         }
       ]
     },
     "views": {
-      "blockChain": [
+      "package": [
         {
-          "id": "USDT",
-          "name": "USDT"
+          "id": "packageScripts",
+          "name": "脚本"
         }
       ]
     },
@@ -77,7 +77,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/chenzejiang/vscode-btc-price-watch"
+    "url": "https://github.com/chenzejiang/vscode-package-json"
   },
   "__npminstall_done": false
 }
