--- a/package.json
+++ b/package.json
@@ -55,9 +55,7 @@
     "vscode": "^1.1.6"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "fs-extra": "^8.1.0",
-    "open": "^6.4.0"
+    "fs-extra": "^8.1.0"
   },
   "repository": {
     "type": "git",
